<resources>
    <string name="app_name">Khojak</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location">Map</string>
    <string name="close">Close</string>
    <string name="reminder_prompt_title">Set a reminder</string>
    <string name="reminder">Remind me about</string>
    <string name="button_clear">Clear</string>
    <string name="add_submit">Add</string>
    <string name="exit">Exit</string>
    <string name="set_location_txt">Set Location</string>
    <string name="set_destination_location_txt">Set Destination Location</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="location_tracker">Location Tracker</string>
    <string name="location_reminder">Location Reminder</string>
    <string name="app_id">khojak-gdxut</string>
    <string name="prompt_username">Username (case sensitive)</string>
    <string name="action_sign_up">New user ?  Register</string>
    <string name="action_sign_in">Existing user ?  Login</string>
    <string name="khojak_logo">khojak logo</string>
    <string name="title_activity_reminders">Reminders</string>
    <string name="tab_text_1">Personal Reminders</string>
    <string name="tab_text_2">Group Reminders</string>

    <string name="no_reminders_set">No reminders set</string>
    <string name="no_pending_requests">No pending requests at this point</string>
    <string name="what_is_your_group_s_name">What is your group\'s name ?</string>
    <string name="enter_group_member_s_username">Enter group member\'s username</string>
    <string name="create_group">Create Group</string>
    <string name="empty_field_error">Field cannot be empty</string>
    <string name="done">Done</string>
    <string name="add_member">Add member</string>
    <string name="username_error">User does not exist! Please register</string>
    <string name="username_required">Username required</string>
    <string name="duplicate_user">User with this username already exists! Please login</string>
    <string name="groups">Groups :</string>
    <string name="no_groups_created">No groups created</string>
    <string name="title_activity_group_details">Group Details</string>
    <string name="start_tracking">Start tracking</string>
    <string name="locationEmptyMsg">Location cannot be empty</string>
    <string name="noGroupsPresentMsg">No groups present. You need to create a group first!</string>

    <string-array name="Groups">
        <item>Home</item>
        <item>Other</item>
        <item>Work</item>
        <item>Custom</item>
    </string-array>
    <string name="title_activity_pending_requests">Pending Requests</string>


</resources>
