<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="0dp"
    android:background="@color/colorPrimary"
    android:theme="@style/AppTheme.ReminderInfo"
    tools:context=".TODOList.ReminderInfo">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="5dp"
        android:src="@drawable/ic_close_black_24dp"
        android:contentDescription="@string/close"
        android:contextClickable="true"
        android:onClick="closeActivity"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/popUpColor">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_details"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reminderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/urlName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:ems="10"
                        android:hint="@string/reminder"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">
                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/button_clear"
                            android:layout_weight="1"
                            android:layout_gravity="center|center"
                            android:backgroundTint="@color/colorPrimary"
                            android:onClick="clearText"/>
                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|center"
                            android:layout_weight="1"
                            android:text="@string/add_submit"
                            android:backgroundTint="@color/colorPrimary"
                            android:onClick="createReminder"/>
                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|center"
                            android:layout_weight="1"
                            android:text="@string/exit"
                            android:backgroundTint="@color/exit"
                            android:onClick="exit"/>
                    </LinearLayout>
                </androidx.coordinatorlayout.widget.CoordinatorLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</RelativeLayout>